--- a/src/scss/blocks/form.scss
+++ b/src/scss/blocks/form.scss
@@ -456,6 +456,7 @@ input[type="number"]::-webkit-inner-spin-button {
 			margin-left: auto;
 			font-weight: 400;
 			text-align: right;
+			padding-left: 10px;
 		}
 	}
 }
@@ -479,6 +480,18 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 @include tablet {
+	/* Стили по вордпресс и вукомерс */
+	.woocommerce-checkout {
+		.row-2 {
+			flex-direction: column;
+			.form-group {
+				width: 100%;
+				&:nth-child(odd) {
+					margin-right: 0;
+				}
+			}
+		}
+	}
 	.row-3 {
 		flex-direction: column;
 		&>.col {
@@ -514,6 +527,14 @@ input[type="number"]::-webkit-inner-spin-button {
 			&::before {
 				color: var(--font-color);
 			}
+		}
+	}
+	.s-checkbox {
+		margin: 0 10px 10px 0;
+		span {
+			padding: 12px 15px;
+			font-size: 15px;
+			line-height: 18px;
 		}
 	}
 }
