--- a/src/scss/widgets/product.scss
+++ b/src/scss/widgets/product.scss
@@ -702,6 +702,22 @@
       margin-bottom: 10px;
     }
   }
+
+  .quantity {
+    input {
+      padding: 6px 4px;
+      height: 36px;
+      font-size: 15px;
+      line-height: 18px;
+    }
+    &-btns {
+      button {
+        width: 20px;
+        height: 20px;
+        font-size: 22px;
+      }
+    }
+  }
 }
 
 @include mobile {
