--- a/src/scss/blocks/buttons.scss
+++ b/src/scss/blocks/buttons.scss
@@ -151,6 +151,7 @@
 	color: var(--global-color);
 	padding: 4px 0;margin: 0;
 	outline: none;border: 0;
+	border-radius: 0 !important;
 	border-bottom: 1px solid var(--global-color);
 	background: none;
 	&:hover {
@@ -223,7 +224,7 @@
 }
 
 .download-link {
-	display: inline-block;
+	display: inline-flex;
 	align-items: center;
 	justify-content: flex-start;
 	font-size: 17px;
@@ -232,7 +233,8 @@
 	text-decoration: none;
 	color: var(--font-color);
 	i {
-		font-size: 24px;
+		margin-right: 10px;
+		font-size: 22px;
 		line-height: 1;
 		color: var(--global-color);
 	}
