--- a/src/scss/blocks/components.scss
+++ b/src/scss/blocks/components.scss
@@ -117,7 +117,7 @@
 
 .canlike {
   .default-wrapper {
-    .link {
+    .link-dark {
       margin-top: 24px;
     }
   }
@@ -270,7 +270,7 @@
   }
   .canlike {
     .default-wrapper {
-      .link {
+      .link-dark {
         order: 1;
       }
     }
