--- a/src/scss/widgets/reviews.scss
+++ b/src/scss/widgets/reviews.scss
@@ -170,7 +170,7 @@
         flex-direction: column;
       }
       .desktop-hidden {
-        display: flex;
+        display: block;
       }
       .mob-hidden {
         display: none;
