--- a/src/scss/blocks/footer.scss
+++ b/src/scss/blocks/footer.scss
@@ -129,11 +129,12 @@
     justify-content: flex-end;
     flex-wrap: wrap;
     margin-top: 20px;
+    row-gap: 14px;
     img {
       width: auto;
       max-height: 30px;
-      &:not(:first-child) {
-        margin-left: 30px;
+      &:not(:last-child) {
+        margin-right: 30px;
       }
     }
   }
