--- a/src/scss/blocks/tabs.scss
+++ b/src/scss/blocks/tabs.scss
@@ -31,7 +31,7 @@
 			position: absolute;
 			left: 0;
 			right: 0;
-			bottom: -1px;
+			bottom: 0;
 			width: 100%;
 			height: 1px;
 			background-color: #989898;
