--- a/src/scss/widgets/cart.scss
+++ b/src/scss/widgets/cart.scss
@@ -239,6 +239,9 @@
 					width: 100%;
 				}
 				&:nth-child(2) {
+					margin-top: 24px;
+					padding-top: 40px;
+					border-top: 1px solid #131313;
 					width: 100%;
 				}
 			}
@@ -391,6 +394,8 @@
 			}
 		}
 		&-bottom {
+			align-items: center;
+			justify-content: center;
 			.row {
 				max-width: 100%;
 				font-size: 16px;
