--- a/src/scss/widgets/history.scss
+++ b/src/scss/widgets/history.scss
@@ -115,13 +115,14 @@
             margin-right: 24px;
           }
           a {
+            padding: 2px 0;
             font-size: 16px;
             &::before {
               transform: none;
               top: auto;
               left: 0;
               right: 0;
-              bottom: -1px;
+              bottom: 0;
               width: 100%;
               height: 1px;
               background-color: var(--font-color);
@@ -142,6 +143,14 @@
 
 @include mobile {
   .history {
+    .heading {
+      .title-1 {
+        span {
+          margin-left: 0;
+          display: inline;
+        }
+      }
+    }
     &__item {
       justify-content: flex-start;
       flex-direction: column;
