--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,7 +5,7 @@
 :root {
   // base
   --font-family: "Comfortaa", sans-serif;
-  --font-montserrat: "Montserrat-Extrabold", "Comfortaa", sans-serif;
+  --font-montserrat: "Montserrat-Extrabold", sans-serif;
 
   --content-width: 1160px;
   --container-offset: 15px;
