--- a/src/scss/widgets/contacts.scss
+++ b/src/scss/widgets/contacts.scss
@@ -144,14 +144,24 @@
 
 @media screen and (min-width: 1190px) {
   .teamSwiper {
-    width: calc(100% + 20px);
-    max-width: calc(100% + 20px);
-    margin-right: -20px;
-    padding-right: 20px;
+    // width: calc(100% + 20px);
+    // max-width: calc(100% + 20px);
+    // margin-right: -20px;
+    // padding-right: 20px;
+    // .swiper-slide {
+    //   width: 330px !important;
+    //   &-active {
+    //     width: 420px !important;
+    //   }
+    // }
     .swiper-slide {
-      width: 330px;
-      &-active {
-        width: 420px;
+      transition: all 0.5s ease;
+      padding: 40px 0;
+    }
+    .swiper-slide-active {
+      transform: scale(1.22);
+      .teamcard {
+        padding-bottom: 12px;
       }
     }
   }
