--- a/src/scss/widgets/catalog.scss
+++ b/src/scss/widgets/catalog.scss
@@ -83,52 +83,6 @@
         transition: 0.3s;
       }
     }
-    // .catSidebar-header {
-    //   display: flex;
-    //   align-items: center;
-    //   justify-content: space-between;
-    //   width: calc(100% + 25px);
-    //   margin: 0 -10px 20px -15px;
-    //   padding: 12px 10px 12px 15px;
-    //   font-size: 18px;
-    //   font-weight: 700;
-    //   line-height: 1;
-    //   border-bottom: 1px solid #bbbbbb;
-    // }
-    // .catSidebar-header .btn-toggle .icon-close {
-    //   display: block;
-    // }
-    // .catSidebar-btn {
-    //   display: inline-flex;
-    //   align-items: center;
-    //   justify-content: flex-start;
-    //   position: relative;
-    //   width: 140px;
-    //   max-width: 140px;
-    //   height: 34px;
-    //   padding: 4px 40px 4px 7px;
-    //   font-weight: 300;
-    //   font-size: 17px;
-    //   line-height: 20px;
-    //   border-radius: 8px;
-    //   color: var(--font-color);
-    //   border: 1px solid #393939;
-    //   background: linear-gradient(114.33deg, #292929 0%, #141414 100%);
-    // }
-    // .catSidebar-btn::before {
-    //   content: "\e912";
-    //   position: absolute;
-    //   top: 50%;
-    //   right: 10px;
-    //   transform: translateY(-50%);
-    //   width: 16px;
-    //   height: 16px;
-    //   font-family: "icomoon";
-    //   font-size: 16px;
-    //   line-height: 1;
-    //   color: #757575;
-    //   transition: 0.3s;
-    // }
     &-item-open .catalog__sidebar-body {
       margin-top: 16px;
     }
@@ -136,6 +90,9 @@
       transform: rotate(-90deg);
     }
     &-body {
+      overflow: hidden;
+      height: 0;
+      transition: all .25s ease;
       .checkbox {
         margin-bottom: 0;
         &:not(:last-child) {
