price range for catalog filters

--- a/src/template/meta.html
+++ b/src/template/meta.html
@@ -24,4 +24,6 @@
 <link href="css/swiper-bundle.min.css" rel="stylesheet">
 <!-- SELECT2 -->
 <link rel="stylesheet" href="css/select2.min.css">
+<!-- FOR RANGE -->
+<link rel="stylesheet" href="css/jquery-ui.css">
 <link href="css/style.min.css" type="text/css" rel="stylesheet">
