--- a/src/template/scripts.html
+++ b/src/template/scripts.html
@@ -5,7 +5,9 @@
 <script src="js/jquery.fancybox.min.js"></script>
 <script src="js/select2.min.js"></script>
 
-<!-- <script src="js/readmore.min.js"></script> -->
+<!-- FOR RANGE -->
+<script src="js/jquery-ui.js"></script>
+<script src="js/jquery.ui.touch-punch.min.js"></script>
 
 <!-- Yandex Map -->
 <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=<5a55f487-a252-4929-8714-ec32f386f97c>" type="text/javascript"></script>
