--- a/src/scss/widgets/catalog.scss
+++ b/src/scss/widgets/catalog.scss
@@ -85,6 +85,7 @@
     }
     &-item-open .catalog__sidebar-body {
       margin-top: 16px;
+      overflow: visible;
     }
     &-item-open .catalog__sidebar-title::before {
       transform: rotate(-90deg);
@@ -181,6 +182,37 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     margin-bottom: 50px;
+  }
+}
+
+
+.sidebarPrice-wrapper {
+  margin-top: 24px;
+  width: 100%;
+  height: 20px;
+}
+.ui-slider-horizontal {
+  width: calc(100% - 20px);
+  margin: 0 auto;
+  height: 2px;
+  background: #E1E1E1;
+}
+.ui-slider-horizontal .ui-slider-handle {
+  top: -10px;
+  margin-left: -10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  border: 1px solid #292932;
+  background: var(--grey-color);
+  z-index: 2;
+  cursor: pointer;
+  transition: .3s ease;
+	&:hover {
+		border-color: transparent;
+	}
+  &:focus {
+    outline: none;
   }
 }
 
